# botmother

./: .gitignore  MAINFEST.in  README.MD  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
botmother/: admin.py  apps.py  models.py  webhook.py
botmother/management/commands/: polling.py  set_webhook.py  setwebhook.py
botmother/migrations/: 0001_initial.py  0002_auto_20200919_1002.py  0002_auto_20201029_0507.py  0002_auto_20201117_1240.py  0002_auto_20201117_1252.py  0002_chat_stopped_at.py  0003_auto_20201029_1226.py  0003_auto_20201117_1249.py
botmother/querysets/: chat.py  message.py
botmother/tests/: request.py  test_bot_router.py
botmother/tests/webhook/: back_to_menu_text.json  callback.json  categories_text.json  category_callback.json  command.json  location.json  my_city_text.json  order_address_text.json  order_contact.json  order_info_callback.json  order_product_count.json  products_text.json  set_region_text.json  text.json  vendor_products_callback.json  vendors_text.json
botmother/utils/: api.py  bot_router.py  helpers.py  keyboards.py  location.py  string.py
config/: settings.py  settings_dev.py.example  urls.py  wsgi.py
example/: keyboards.py  urls.py
example/handlers/: main.py
