[metadata]
name = botMother
version = 1.0.1
description = BotMother is django library which makes creating awesome telegram bots easier.
long_description = file: README.md
url = https://mondaylabs.tech/
author = Monday Labs
author_email = ''
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
